[package]
name = "hyper-mtls-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.4"
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.4.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["net"] }
tokio-rustls = "0.26.0"
hyper = { version = "1.2.0", features = ["server", "http1", "http2"] }
tracing = "0.1.40"
