[package]
name = "hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["server", "http1"] }
clap = { version = "4.4.7", features = ["derive", "env"]}
hyper-mtls-server = { path = "../../"}