[package]
name = "hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.1"
clap = { version = "4.4.7", features = ["derive", "env"]}
hyper-mtls-server = { path = "../../"}
